[package]
name = "gradle_build_profiler"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to analyze Gradle build profiles and provide performance insights"
license = "MIT"
repository = "https://github.com/Chaebin-Park/GradleBuildProfiler"
keywords = ["gradle", "build", "profiler", "android", "performance"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# 바이너리 이름 설정 (하이픈 사용)
[[bin]]
name = "gradle-build-profiler"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"  # 간단한 에러처리
clap = { version = "4.5.51", features = ["derive"] }    # CLI 파싱 (명령어, 옵션 처리)
colored = "3.0.0"   # 터미널 색상 출력
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }  # JSON 직렬화/역직렬화
serde_json = "1.0.145"  # JSON 파싱
tabled = "0.20.0"   # 테이블 형식 출력
thiserror = "2.0.17"    # 커스텀 에러 타입 정의
walkdir = "2.5.0"   # 디렉토리 탐색
